examples/effects/m7b_1_alias_non_effect.err.expected
error: unknown effect in alias body: Int (declared as part of `Bad`)
  --> examples/effects/m7b_1_alias_non_effect.kai:6:1
    |
  6 | type Bad = Console + Int
    | ^
